--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build:gh": "ng build --prod --bh Login-Signup",
+    "build:gh": "ng build --prod --bh login-signup",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
